# shopify-demo-mode

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bcd5a3ba7da2_create_orders_and_line_items.py
src/sales_agent/agents/: analyst.py  data_fetcher.py  reporter.py
src/sales_agent/cli/: main.py
src/sales_agent/config/: settings.py
src/sales_agent/db/: models.py  repository.py  session.py
src/sales_agent/factory/: agent_factory.py  crew_factory.py
src/sales_agent/models/: order.py  product.py
src/sales_agent/tools/: analysis_tool.py  db_tool.py  demo_data.py  report_tool.py  shopify_tool.py
tests/: conftest.py  test_analysis_tool.py  test_crew_factory.py  test_shopify_tool.py
