[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-agent"
version = "0.1.0"
description = "Agente multi-agente de análise de vendas Shopify com CrewAI"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80.0",
    "anthropic>=0.40.0",
    "ShopifyAPI>=12.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "tabulate>=0.9.0",
    "typer>=0.13.0",
]

[project.scripts]
sales-agent = "sales_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sales_agent"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
